--- a/views/lookbook.html
+++ b/views/lookbook.html
@@ -71,6 +71,21 @@
             <img src="/imgs/foto1.jpg" style="width: 100%">
 
         </div>
+        <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img src="/imgs/foto10.jpg" style="width: 100%">
+        
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img src="/imgs/foto9.jpg" style="width: 100%">
+        
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img src="/imgs/foto8.jpg" style="width: 100%">
+        
+        </div>
 
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a> <a class="next" onclick="plusSlides(1)">&#10095;</a>
